--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "![Design preview for the Multi-step form coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass scss/main.scss css/style.css -w",
-    "devserver": "live-server",
+    "watch:sass": "sass --watch scss/main.scss:css/style.css",
+    "devserver": "npx live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass scss/main.scss css/style.comp.css",
+    "compile:sass": "sass scss/main.scss:css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
